--- a/common.css
+++ b/common.css
@@ -4,7 +4,7 @@
     border: 0;
     width: 1210px;
     height: 100px;
-    background-color: #fdfcf8;
+    background-color: red;
 }
 #wrapper {
     margin: 0 auto;
