--- a/common.css
+++ b/common.css
@@ -6,6 +6,14 @@
     height: 100px;
     background-color: red;
 }
+#header_img {
+    margin: 0 0 0 12px;
+    padding: 0;
+    border: 0;
+    width: 100px;
+    height: 100px;
+    background-image: url(/src/img/docatg.png);
+}
 #wrapper {
     margin: 0 auto;
     padding: 0;
