--- a/common.css
+++ b/common.css
@@ -4,7 +4,7 @@
     border: 0;
     width: 1210px;
     height: 100px;
-    background-color: red;
+    background-color: green;
 }
 #header_img {
     margin: 0 0 0 12px;
