--- a/common.css
+++ b/common.css
@@ -4,7 +4,7 @@
     border: 0;
     width: 1210px;
     height: 100px;
-    background-color: green;
+    background-color: white;
 }
 #header_img {
     margin: 0 0 0 12px;
@@ -20,5 +20,5 @@
     border: 0;
     width: 1239px;
     text-align: left;
-    background-color: gray;
+    background-color: green;
 }
