--- a/common.css
+++ b/common.css
@@ -1,22 +1,23 @@
-#header_index {
-    margin: 0 0 0 12px;
+#top {
+    margin: 0 0 0 0;
     padding: 0;
     border: 0;
-    height: 100px;
-    background-color: white;
-}
-#header_img {
-    margin: 0 0 0 12px;
-    padding: 0;
-    border: 0;
-    width: 100px;
-    height: 100px;
-    background-image: url(/src/img/docatg.png);
+    height: 50px;
+    background-color: black;
 }
 #wrapper {
     margin: 0 auto;
     padding: 0;
     border: 0;
+    width: 1239px;
     text-align: left;
-    background-color: green;
+    background-color: white;
+}
+#header_index {
+    margin: 10 10 10 10px;
+    padding: 0;
+    border: 0;
+    width: 200px;
+    height: 150px;
+    background-color: white;
 }
