--- a/common.css
+++ b/common.css
@@ -1,9 +1,9 @@
-#top {
+.top {
     margin: 0 0 0 0;
     padding: 0;
     border: 0;
     height: 50px;
-    width : 100%;
+    width : 1000px;
     background-color: black;
 }
 #wrapper {
