--- a/common.css
+++ b/common.css
@@ -12,13 +12,14 @@ div#wrapper {
     border: 2px;
     border-style: solid dotted dashed double;
     width: 1239px;
+    height:100px;
     text-align: left;
     background-color: white;
     position: absolute;
     left: 0;
     right: 0;
     bottom: 0;
-    top: 0;
+    top: 50px;
 }
 div#header_index {
     margin: 10 10 10 10px;
