--- a/CSS/index.css
+++ b/CSS/index.css
@@ -12,3 +12,4 @@ img{display:block;border:0px;}
 #header{width:1000px;margin:0 auto;}
 #header h1{font-size:24px;color:#664666;padding:5px 0 5px 15px;font-weight:600;}
 #header p{font-size:18px;color:#DB5E5E;font-weight:500;}
+#header
