--- a/CSS/index.css
+++ b/CSS/index.css
@@ -9,7 +9,8 @@ a{text-decoration:none;}
 li{list-style:none;}
 img{display:block;border:0px;}
 /*end*/
-#header{width:1000px;margin:0 auto;}
+#header{width:1000px;height:100px;margin:0 auto;}
 #header h1{font-size:24px;color:#664666;padding:5px 0 5px 15px;font-weight:600;}
 #header p{font-size:18px;color:#DB5E5E;font-weight:500;}
-#header
+#header .logo{width:100px;height:100px;margin:10;border-style: solid;border-width: 1,1,1,1;}
+#header .titlename{width: 900px;height:100px;}
