--- a/CSS/index.css
+++ b/CSS/index.css
@@ -5,7 +5,6 @@ body{font-size:14px;font-family:"微软雅黑";background:#E3E3E5 url(../src/img
 a{text-decoration:none;}
 .left{float:left;}
 .right{float:right;}
-.center{float:center;}
 .clear{clear:both;}
 li{list-style:none;}
 img{display:block;border:0px;}
@@ -13,5 +12,5 @@ img{display:block;border:0px;}
 #header{width:1000px;height:100px;margin:0 auto;}
 #header h1{font-size:24px;color:#664666;padding:5px 0 5px 15px;font-weight:600;}
 #header p{font-size:18px;color:#DB5E5E;font-weight:500;}
-#header .logo{width:100px;height:100px;margin:10;border-style: solid;border-width: 1,1,1,1;}
+#header .logo{width:100px;height:100px;margin:o auto;padding:20% 20% 20% 20%;border-style: solid;border-width: 1,1,1,1;}
 #header .titlename{width: 800px;height:100px;}
