--- a/CSS/index.css
+++ b/CSS/index.css
@@ -8,7 +8,7 @@ a{text-decoration:none;}
 .clear{clear:both;}
 li{list-style:none;}
 img{display:block;border:0px;}
-h1,h2,h3,h4,h5,h6,a{
+h1,h2,h3,h4,h5,h6{
 	font-family: 'Bad Script', cursive;
 	font-weight:100;
 	margin:0;
