--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,10 @@
 /* CSS Document */
 @charset "utf-8";
+
+@font-face {
+  font-family: BadScript;
+  src: url("../src/font/Bad Script Regular.ttf");
+}
 *{margin:0; padding:0px;}
 body{font-size:14px;font-family:"微软雅黑";background:#E3E3E5 url(../src/img/bg.jpg)  50% top scroll no-repeat;color:#5d5d5d;}
 a{text-decoration:none;}
@@ -9,7 +14,7 @@ a{text-decoration:none;}
 li{list-style:none;}
 img{display:block;border:0px;}
 h1,h2,h3,h4,h5,h6{
-	font-family: 'Bad Script', cursive;
+	font-family: BadScript;
 	font-weight:100;
 	margin:0;
 }
