--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,9 @@
 /* CSS Document */
 @charset "utf-8";
+@font-face {
+  font-family: BadScript;
+  src: url("../src/font/Bad Script Regular.ttf");
+}
 *{margin:0; padding:0px;}
 body{font-size:14px;font-family: BadScript;background:#E3E3E5 url(../src/img/bg.jpg)  50% top scroll no-repeat;color:#5d5d5d;}
 a{text-decoration:none;}
