--- a/CSS/index.css
+++ b/CSS/index.css
@@ -15,7 +15,7 @@ img{display:block;border:0px;}
 
 /*end*/
 #header{width:1000px;height:100px;margin:0 auto;}
-#header h1{font-size:24px;color:#664666;padding:5px 0 5px 15px;font-weight:600;}
-#header p{font-size:18px;color:#DB5E5E;font-weight:500;}
+#header h1{font-size:100px;color:#664666;padding:5px 0 5px 15px;font-weight:600;}
+#header p{font-size:30px;color:#DB5E5E;font-weight:500;}
 #header .logo{width:100px;height:100px;margin:0 auto;border-style: solid;border-width: 1,1,1,1;}
-#header .titlename{width: 800px;height:100px;padding:0 20% 0 20%;}
+#header .titlename{width: 800px;height:100px;text-align:center;}
